tests/neg-custom-args/captures/linear-buffer.check
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:5:24 ------------------------------------------------------
5 |  mut def append(x: T): BadBuffer[T]^ = this // error
  |                        ^^^^^^^^^^^^^
  |      Separation failure: method append's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
  |      The access must be in a @consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:7:13 ------------------------------------------------------
7 |    def bar: BadBuffer[T]^ = this // error
  |             ^^^^^^^^^^^^^
  |         Separation failure: method bar's result type BadBuffer[T]^ hides non-local this of class class BadBuffer.
  |         The access must be in a @consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:6:9 -------------------------------------------------------
6 |  def foo = // error
  |         ^
  |Separation failure: method foo's inferred result type BadBuffer[box T^{}]^ hides non-local this of class class BadBuffer.
  |The access must be in a @consume method to allow this.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:19:17 -----------------------------------------------------
19 |  val buf3 = app(buf, 3) // error
   |                 ^^^
   |                 Separation failure: Illegal access to (buf : Buffer[Int]^), which was passed to a
   |                 @consume parameter or was used as a prefix to a @consume method on line 17
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:26:17 -----------------------------------------------------
26 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |                 @consume parameter or was used as a prefix to a @consume method on line 24
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:34:17 -----------------------------------------------------
34 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |                 @consume parameter or was used as a prefix to a @consume method on line 31
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:44:17 -----------------------------------------------------
44 |  val buf3 = app(buf1, 4) // error
   |                 ^^^^
   |                 Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |                 @consume parameter or was used as a prefix to a @consume method on line 39
   |                 and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer.scala:48:8 ------------------------------------------------------
48 |    app(buf, 1)  // error
   |        ^^^
   |        Separation failure: (buf : Buffer[Int]^) appears in a loop, therefore it cannot
   |        be passed to a @consume parameter or be used as a prefix of a @consume method call.
